tests/testcases/errors/BCE0060-1.boo
"""
BCE0060-1.boo(5,18): BCE0060: 'Foo.Bar()': no suitable method found to override.
"""
class Foo:
	override def Bar():
		pass

